changed create controller to a unique request
